Fix: Align black hole with the center of full title

--- a/styles.css
+++ b/styles.css
@@ -486,6 +486,7 @@ body {
 
     .blackhole-container {
         top: calc(50% - 80px);
+        left: 50%;
     }
 }
 
@@ -495,7 +496,7 @@ body {
     height: 400px;
     position: fixed;
     top: calc(50% - 100px);
-    left: 50%;
+    left: calc(50% + 60px);
     transform: translate(-50%, -50%);
     display: flex;
     align-items: center;
